<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:gravity="center_horizontal">
    
    <Button
        android:id="@+id/telaGerente_Ponto" 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/str_Button_CheckInOut"/>    
    
    <Button 
        android:id="@+id/telaGerente_AlterarUserInfo"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/str_Button_ChangeUserInfo" />
    
    <Button 
        android:id="@+id/telaGerente_LogPontos"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/str_Button_ListCheckInOut"/>

    <Button
        android:id="@+id/telaGerente_Func"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/activity_GerenciarFuncionarios" />

    <Button
        android:id="@+id/telaGerente_Config"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/activity_Configuracoes" />

</LinearLayout>