<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal" >
    
    <ScrollView 
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16dp"
				android:layout_marginBottom="10dp"
                android:text="Titulo App" />

            <EditText
                android:id="@+id/config_txtTitleApk"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:inputType="text"
                android:layout_marginBottom="30dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16dp"
				android:layout_marginBottom="10dp"
                android:text="@string/str_SubTitle_EmailNotification" />
            
            <ToggleButton 
                android:id="@+id/config_Toggle_Email"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:checked="false"
                android:layout_marginBottom="10dp"
                android:textOn="Ativado"
                android:textOff="Desativado" />

            <EditText
                android:id="@+id/config_txtEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp" 
                android:singleLine="true"
                android:hint="@string/str_Hint_Email"
                android:imeOptions="actionDone"
                android:inputType="textEmailAddress"
                android:visibility="gone"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16dp"
				android:layout_marginBottom="10dp"
                android:text="@string/str_SubTitle_PhoneNotification" />

            <ToggleButton 
                android:id="@+id/config_Toggle_Phone"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:checked="false" 
                android:layout_marginBottom="10dp"
                android:textOn="Ativado"
                android:textOff="Desativado"/>
            
            <EditText
                android:id="@+id/config_txtPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:inputType="phone"
                android:singleLine="true"
                android:hint="@string/str_Hint_Phone"
                android:imeOptions="actionDone"
                android:visibility="gone" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16dp"
				android:layout_marginBottom="10dp"
                android:text="@string/str_SubTitle_CheckIn" />

            <Button
                android:id="@+id/config_btnCheckIn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:layout_marginBottom="30dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16dp"
				android:layout_marginBottom="10dp"
                android:text="@string/str_SubTitle_CheckOut" />
            
            <Button
                android:id="@+id/config_btnCheckOut"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:layout_marginBottom="10dp"  />
            
            <Button
                android:id="@+id/config_btnCreateXLS"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:layout_marginBottom="10dp"
                android:text="@string/str_Button_CreateXLS" />
            
            <Button
                android:id="@+id/config_btnSendXLS"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:layout_marginBottom="10dp"
                android:text="@string/str_Button_SendXLS" />

			  <Button
                android:id="@+id/config_btnOpenXLS"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:layout_marginBottom="10dp"
                android:text="@string/str_Button_OpenXLS" />
            
        </LinearLayout>
        
    </ScrollView>
    
</LinearLayout>