<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center" >

    
    <LinearLayout
        android:id="@+id/altLogin_Linear_User"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        android:gravity="center"
        android:orientation="vertical" >
		
        <TextView 
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="16dp"
            android:layout_marginBottom="20dp"
            android:text="@string/str_SubTitle_NewUser"/>
        
        <EditText
            android:id="@+id/altLogin_NewUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:inputType="textCapWords"
            android:imeOptions="actionDone" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/altLogin_LinearPass"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        android:gravity="center"
        android:orientation="vertical" >
		
        <TextView 
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="16dp"
            android:layout_marginBottom="20dp"
            android:text="@string/str_SubTitle_OldPassword"/>
        
        <EditText
            android:id="@+id/altLogin_OldPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionNext"
            android:inputType="textPassword"
            android:imeActionId="@+id/altLogin_NewPass1" />
		
        <TextView 
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:textSize="16dp"
            android:layout_marginBottom="20dp"
            android:text="@string/str_SubTitle_NewPassword"/>
        
        <EditText
            android:id="@+id/altLogin_NewPass1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" 
            android:inputType="textPassword"
            android:imeOptions="actionNext"
            android:imeActionId="@+id/altLogin_NewPass2"/>

        <EditText
            android:id="@+id/altLogin_NewPass2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/str_Hint_Password"
            android:inputType="textPassword" 
            android:imeOptions="actionDone"/>

        <TextView 
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="14dp"
            android:layout_marginBottom="20dp"
            android:text="@string/str_Info_Password"/>
        
    </LinearLayout>
    
</LinearLayout>